# flet_payment_app

./: .gitignore  README.md  main.py  pyproject.toml
scripts/: view_payments_list.py
src/payments_src/: __init__.py
src/payments_src/db/csv_db/: __init__.py  db_constants.py  db_initialization_ops.py  db_operations.py  db_remove_files.py
src/payments_src/db/csv_db/scripts/: clear_all_tables.py  initialize_tables.py
src/payments_src/domain/: borrower_enums.py  borrowers.py  car.py  dealerships.py  file_groups.py  loans.py  loans_enums.py  payment_enums.py  payments.py  potential_borrowers.py
src/payments_src/frontend/: page_active_loans.py  page_dealership_management.py  page_inicio.py  page_monthly_payment_calculation.py  page_payment_management.py  page_potential_borrowers.py  page_statistics.py  sidebar.py  utils.py
src/payments_src/frontend/enums/: __init__.py  enums_active_loans.py  enums_dealership_management.py  enums_inicio.py  enums_payment_management.py  enums_potential_borrowers.py  enums_sidebar.py
src/payments_src/operations/: __init__.py
src/payments_src/operations/loans/: __init__.py  loan_number_calculations.py
src/payments_src/operations/payments/: __init__.py  monthly_payment_calculations.py  payment_operations.py
src/payments_src/shared/: pydantic_validation_utils.py
src/tests/db/csv_db/: test_db_initialization_ops.py
src/tests/domain/: test_borrowers.py  test_car.py  test_dealership.py  test_loans.py  test_payments.py  test_potential_borrowers.py
